Data ingestion notebook added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "id": "b4f3012c",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 113,
    "id": "a99abb87",
    "metadata": {},
    "outputs": [],
@@ -151,26 +151,29 @@
     "import ssl\n",
     "import certifi\n",
     "import urllib.request\n",
+    "from pathlib import Path\n",
     "\n",
     "class DataIngestion:\n",
     "    def __init__(self, config):\n",
     "        self.config = config\n",
     "\n",
     "    def download_file(self):\n",
-    "        url = self.config.source_URL\n",
     "        local_path = self.config.local_data_file\n",
+    "        url = self.config.source_URL\n",
     "\n",
-    "        # Create SSL context using certifi\n",
-    "        ssl_context = ssl.create_default_context(cafile=certifi.where())\n",
+    "        if not os.path.exists(local_path):\n",
+    "            # Create SSL context using certifi\n",
+    "            ssl_context = ssl.create_default_context(cafile=certifi.where())\n",
     "\n",
-    "        # Download the file securely\n",
-    "        with urllib.request.urlopen(url, context=ssl_context) as response:\n",
-    "            with open(local_path, 'wb') as out_file:\n",
-    "                out_file.write(response.read())\n",
+    "            # Secure download\n",
+    "            with urllib.request.urlopen(url, context=ssl_context) as response:\n",
+    "                with open(local_path, 'wb') as out_file:\n",
+    "                    out_file.write(response.read())\n",
     "\n",
-    "        print(f\"✅ File downloaded successfully to {local_path}\")\n",
+    "            logger.info(f\"✅ File downloaded successfully to {local_path}\")\n",
+    "        else:\n",
+    "            logger.info(f\"⚡ File already exists of size: {get_size(Path(local_path))}\")\n",
     "\n",
-    "        \n",
     "    \n",
     "    def extract_zip_file(self):\n",
     "        \"\"\"\n",
@@ -186,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 114,
    "id": "ae5e206e",
    "metadata": {},
    "outputs": [
@@ -194,11 +197,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-08-25 17:56:47,856 : INFO : common : yaml file config/config.yaml loaded successfully]\n",
-      "[2025-08-25 17:56:47,859 : INFO : common : yaml file params.yaml loaded successfully]\n",
-      "[2025-08-25 17:56:47,859 : INFO : common : created directory at : artifacts]\n",
-      "[2025-08-25 17:56:47,861 : INFO : common : created directory at : artifacts/data_ingestion]\n",
-      "✅ File downloaded successfully to artifacts/data_ingestion/data.zip\n"
+      "[2025-08-25 18:42:50,485 : INFO : common : yaml file config/config.yaml loaded successfully]\n",
+      "[2025-08-25 18:42:50,489 : INFO : common : yaml file params.yaml loaded successfully]\n",
+      "[2025-08-25 18:42:50,490 : INFO : common : created directory at : artifacts]\n",
+      "[2025-08-25 18:42:50,491 : INFO : common : created directory at : artifacts/data_ingestion]\n",
+      "[2025-08-25 18:42:50,492 : INFO : 679700988 : ⚡ File already exists of size: ~ 7718 KB]\n"
      ]
     }
    ],
